Wand core tex, recipe

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -88,6 +88,9 @@ item.knowledgeNote.name=Knowledge Note
 item.enhancedBrewingStand.name=Enhanced Brewing Stand
 item.scorchingPickaxe.name=Scorching Pickaxe
 item.fireShard.name=Fire Shard
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
 item.energyWand.name=Energy Wand
 item.charmPouch.name=Charm Pouch
 item.rune.any.name=Rune (Any)
