--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -92,6 +92,7 @@ item.obsidianFragment.name=Obsidian Fragment
 item.obsidianRod.name=Obsidian Rod
 item.energyWandCore.name=Energy Wand Core
 item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
 item.charmPouch.name=Charm Pouch
 item.rune.any.name=Rune (Any)
 item.rune.power.name=Rune of Power
