Updated language files

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/cs_CZ.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/cs_CZ.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Oltář rozložení
 tile.energyExtractionTable.name=Oltář oddělení Energie
 tile.ravagedBrick.name=Zpustošené cihly
 tile.energyCluster.name=Shluk Energie
-item.spectralWand.name=Spectral Wand
 container.enhancedBrewing=Vylepšený varný stojan
 container.decompositionTable=Oltář rozložení
 container.energyExtractionTable=Oltář oddělení Energie
@@ -114,13 +113,12 @@ achievement.traveling101=Základy cestování
 achievement.rebirth.desc=Použij Vyvolávač chrámu a obnov End
 achievement.rebirth=Znovuzrození
 achievement.learningThePowers.desc=Vytvoř Oltář dračí esence
-item.endermanRelicShattered.name=Shattered Enderman Relic
 container.endPowderEnhancements=End Powder Enhancements
 achievement.theMoreYouKnow=The more you know
 achievement.theMoreYouKnow.desc=Press '%1$s' to open Ender Compendium
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
+tile.crossedDecoration.violetMoss.tall.name=Vysoký fialový mech
+tile.crossedDecoration.violetMoss.moderate.name=Středně vysoký fialový mech
+tile.crossedDecoration.violetMoss.short.name=Nízký fialový mech
 tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
 tile.ravagedBrickGlow.name=Zářící zpustošené cihly
 tile.ravagedBrickSlab.name=Ravaged Brick Slab
@@ -129,12 +127,12 @@ tile.ravagedBrickFence.name=Ravaged Brick Fence
 tile.cinder.name=Cinder
 item.scorchingPickaxe.name=Scorching Pickaxe
 item.charmPouch.name=Charm Pouch
-item.rune.power.name=Rune of Power
-item.rune.agility.name=Rune of Agility
-item.rune.vigor.name=Rune of Vigor
-item.rune.defense.name=Rune of Defense
-item.rune.magic.name=Rune of Magic
-item.rune.void.name=Rune of Void
+item.rune.power.name=Runa síly
+item.rune.agility.name=Runa hbitosti
+item.rune.vigor.name=Runa života
+item.rune.defense.name=Runa obrany
+item.rune.magic.name=Runa magie
+item.rune.void.name=Runa nicoty
 item.charm.basicpower.name=Charm of Power
 item.charm.basicagility.name=Charm of Agility
 item.charm.basicvigor.name=Charm of Vigor
@@ -186,15 +184,15 @@ item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
 item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
-entity.hauntedMiner.name=Haunted Miner
+entity.hauntedMiner.name=Tajuplný horník
 tile.voidChest.name=Void Chest
 tile.endiumOre.name=Ložisko Endia
-tile.endiumBlock.name=Blok z Endia
+tile.endiumBlock.name=Blok Endia
 tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratory Glass
-item.endiumIngot.name=Endium Ingot
+tile.laboratoryGlass.name=Sklo Laboratoře
+item.endiumIngot.name=Endiový ingot
 item.knowledgeNote.name=Knowledge Note
-entity.homelandEnderman.name=Homeland Enderman
+entity.homelandEnderman.name=Enderman z Domoviny
 energy.overlay.title=ENERGY CLUSTER
 energy.overlay.holding=HOLDING $ ENERGY
 energy.overlay.regen=REGENERATING UP TO $
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Obsidián Laboratoře
+tile.laboratoryFloor.name=Podlaha Laboratoře
+tile.laboratoryStairs.name=Schody Laboratoře
+item.ghostAmulet.impure.name=Amulet proti duchům (nečistý)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Runa (jakákoliv)
+entity.endermage.name=Endermág
