--- a/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Zersetzungstisch
 tile.energyExtractionTable.name=Energieentzugstisch
 tile.ravagedBrick.name=Zerstörte Ziegel
 tile.energyCluster.name=Energiebündel
-item.spectralWand.name=Spektralzauberstab
 container.enhancedBrewing=Verbesserter Braustand
 container.decompositionTable=Zersetzungstisch
 container.energyExtractionTable=Energieentzugstisch
@@ -114,7 +113,6 @@ achievement.traveling101=Reisen für Anfänger
 achievement.rebirth.desc=Benutze den Tempelrufer und regeneriere das Ende
 achievement.rebirth=Wiedergeburt
 achievement.learningThePowers.desc=Erstelle einen Drachenessenz-Altar
-item.endermanRelicShattered.name=Zerbrochenes Enderman-Relikt
 container.endPowderEnhancements=Endpulver-Verbesserungen
 achievement.theMoreYouKnow=Je mehr du weißt
 achievement.theMoreYouKnow.desc=Crafte ein Enderhandbuch
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
