--- a/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
@@ -1,7 +1,7 @@
 # DO NOT MODIFY THIS FILE!
-tile.obsidianEnd.name=Obsidiana que cae
+tile.obsidianEnd.name=Obsidiana cayendo
 tile.obsidianStairs.name=Escaleras de obsidiana
-tile.obsidianSpecial.smooth.name=Obsidiana lisa
+tile.obsidianSpecial.smooth.name=Obsidiana suave
 tile.obsidianSpecial.chiseled.name=Obsidiana cincelada
 tile.obsidianSpecial.pillar.name=Pilar de obsidiana
 tile.obsidianSpecialGlowing.smooth.name=Obsidiana lisa brillante
@@ -41,7 +41,7 @@ item.essence.spectral.name=Esencia espectral
 item.lorePage.name=Diario del Aventurero
 item.altarNexus.name=Altar del nexo
 item.endPowder.name=Polvo de El Fin
-item.stardust.name=Nebulosa
+item.stardust.name=Polvo Estelar
 item.igneousRock.name=Piedra ígnea
 item.instabilityOrb.name=Orbe inestable
 item.potionOfInstability.name=Poción de inestabilidad
@@ -51,8 +51,8 @@ item.templeCaller.name=Portero del templo
 item.silverfishBlood.name=Sangre de Lepisma
 item.drySplinter.name=Astilla seca
 item.infestationRemedy.name=Cura para la infección
-item.ghostAmulet.name=Amuleto fantasmagórico
-item.endoplasm.name=Ectoplasma
+item.ghostAmulet.name=Amuleto fantasmal
+item.endoplasm.name=Endoplasma
 item.corporealMirageOrb.name=Orbe del espejismo corporeo
 item.endermanRelicRepaired.name=Reliquia de Enderman
 item.bucketEnderGoo.name=Cubo con mejunje de ender
@@ -71,14 +71,14 @@ entity.enderGuardian.name=Guardián de El Fin
 entity.vampireBat.name=Vampiro
 entity.infestedBat.name=Murcielago Infectado
 entity.forestGhost.name=Fantasma
-entity.fireGolem.name=Monstruo Gigante de Fuego
+entity.fireGolem.name=Golem de Fuego
 entity.scorchingLens.name=Lentes quemadas
 namegenerator.middle=, el
-achievement.magicOfDecomposition.desc=Consigue algo de Polvo de Estrellas
+achievement.magicOfDecomposition.desc=Consigue algo de Polvo Estelar
 challenge.hard0Deaths=Jugador experto
 challenge.hard0Deaths.desc=Mata al dragón sin morir
 challenge.bedExplode=Imsonmio
-challenge.bedExplode.desc=Infringe la cantidad final de daño usando las explosiones de las camas
+challenge.bedExplode.desc=Inflige la cantidad final de daño usando las explosiones de las camas
 challenge.noEnderman=Amor por los endermans
 challenge.noEnderman.desc=Na mates a ningún enderman durante la batalla
 achievement.learningThePowers=Aprendiendo los poderes
@@ -87,15 +87,14 @@ achievement.newAdventures=¡Hora de nuevas aventuras!
 challenge.title=Reto:
 challenge.difficulty.hard=Dificultad extrema
 challenge.difficulty.mediumorhard=Dificultad normal / extrema
-item.enderCompendium.name=Compendio de El Fin
+item.enderCompendium.name=Ender Compendium
 tile.decompositionTable.name=Mesa de la descomposición
-tile.energyExtractionTable.name=Mesa de extracción de energía
+tile.energyExtractionTable.name=Mesa de extracción de Energía
 tile.ravagedBrick.name=Ladrillos devastados
 tile.energyCluster.name=Cúmulo de Energía
-item.spectralWand.name=Varita espectral
 container.enhancedBrewing=Soporte de pociones mejorado
 container.decompositionTable=Mesa de la descomposición
-container.energyExtractionTable=Mesa extractora de energía
+container.energyExtractionTable=Mesa de extracción de energía
 tile.sphalerite.name=Blenda
 tile.sphalerite.stardust.name=Blenda con Polvo de Estrellas
 item.spatialDashGem.name=Gema de la carrera espacial
@@ -114,93 +113,103 @@ achievement.traveling101=Viajando 101
 achievement.rebirth.desc=Usa el Portero del Templo y regenera El Fin
 achievement.rebirth=Renacimiento
 achievement.learningThePowers.desc=Crea un Altar de Esencia de Dragon
-item.endermanRelicShattered.name=Reliquia de Enderman rota
 container.endPowderEnhancements=Mejoras del Polvo de El Fin
 achievement.theMoreYouKnow=Cuanto más sepas mejor
-achievement.theMoreYouKnow.desc=Haz un compendio de El Fin
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
-tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
-tile.ravagedBrickGlow.name=Glowing Ravaged Brick
-tile.ravagedBrickSlab.name=Ravaged Brick Slab
-tile.ravagedBrickStairs.name=Ravaged Brick Stairs
-tile.ravagedBrickFence.name=Ravaged Brick Fence
-tile.cinder.name=Cinder
-item.scorchingPickaxe.name=Scorching Pickaxe
-item.charmPouch.name=Charm Pouch
-item.rune.power.name=Rune of Power
-item.rune.agility.name=Rune of Agility
-item.rune.vigor.name=Rune of Vigor
-item.rune.defense.name=Rune of Defense
-item.rune.magic.name=Rune of Magic
-item.rune.void.name=Rune of Void
-item.charm.basicpower.name=Charm of Power
-item.charm.basicagility.name=Charm of Agility
-item.charm.basicvigor.name=Charm of Vigor
-item.charm.basicdefense.name=Charm of Defense
-item.charm.basicmagic.name=Charm of Magic
-item.charm.equality.name=Charm of Equality
-item.charm.blocking.name=Charm of Blocking
-item.charm.blockingreflection.name=Charm of Blocking Reflection
-item.charm.digestiverecover.name=Charm of Digestive Recover
-item.charm.lifesteal.name=Charm of Life Steal
-item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.witcheryharm.name=Charm of Witchery Harm
-item.charm.witcherydefense.name=Charm of Witchery Defense
-item.charm.fallingprotection.name=Charm of Falling Protection
-item.charm.haste.name=Charm of Haste
-item.charm.criticalstrike.name=Charm of Critical Strike
-item.charm.seconddurability.name=Charm of Second Durability
-item.charm.voidrescue.name=Charm of Void Rescue
-item.charm.slaughterimpact.name=Charm of Slaughter Impact
-item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
-item.charm.lastresort.name=Charm of Last Resort
-item.charm.magicdefense.tooltip=-$0 magic damage taken
-item.charm.magicdefense.name=Charm of Magic Defense
-entity.louse.name=Louse
-container.charmPouch=Charm Pouch
-container.runeCrafting=Rune Crafting
-item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
-item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
-item.fireShard.name=Fire Shard
-item.charm.basicpower.tooltip=+$0 damage
-item.charm.basicagility.tooltip=+$0 speed
-item.charm.basicvigor.tooltip=+$0 health regeneration speed
-item.charm.basicdefense.tooltip=-$0 damage taken
-item.charm.basicmagic.tooltip=+$0 experience
-item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
-item.charm.blocking.tooltip=-$0 damage taken when blocking
-item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
-item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
-item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
-item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
-item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
-item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
-item.charm.witcherydefense.tooltip=
-item.charm.fallingprotection.tooltip=+$0 blocks
-item.charm.haste.tooltip=+$0 dig speed
-item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
-item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
-item.charm.voidrescue.tooltip=
-item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
-item.charm.cannotstack=This charm will not stack effects with other charms of this type!
-entity.hauntedMiner.name=Haunted Miner
-tile.voidChest.name=Void Chest
-tile.endiumOre.name=Endium Ore
-tile.endiumBlock.name=Endium Block
-tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratory Glass
-item.endiumIngot.name=Endium Ingot
-item.knowledgeNote.name=Knowledge Note
-entity.homelandEnderman.name=Homeland Enderman
-energy.overlay.title=ENERGY CLUSTER
-energy.overlay.holding=HOLDING $ ENERGY
-energy.overlay.regen=REGENERATING UP TO $
-energy.status.healthy=HEALTHY
-energy.status.weakened=WEAKENED
-energy.status.tired=TIRED
-energy.status.unstable=UNSTABLE
-container.voidChest=Void Chest
+achievement.theMoreYouKnow.desc=Pulsa '%1$s' para abrir el Ender Compendium
+tile.crossedDecoration.violetMoss.tall.name=Musgo violeta largo
+tile.crossedDecoration.violetMoss.moderate.name=Musgo violeta medio
+tile.crossedDecoration.violetMoss.short.name=Musgo violeta corto
+tile.ravagedBrickSmooth.name=Ladrillos devastados suaves
+tile.ravagedBrickGlow.name=Ladrillos devastados brillantes
+tile.ravagedBrickSlab.name=Losa de ladrillo devastado
+tile.ravagedBrickStairs.name=Escaleras de ladrillos devastado
+tile.ravagedBrickFence.name=Valla de ladrillos devastados
+tile.cinder.name=Carboncillo
+item.scorchingPickaxe.name=Pico Mordaz
+item.charmPouch.name=Bolsa de encantamientos
+item.rune.power.name=Runa de Poder
+item.rune.agility.name=Runa de Agilidad
+item.rune.vigor.name=Runa de Vigor
+item.rune.defense.name=Runa de Defensa
+item.rune.magic.name=Runa de Magia
+item.rune.void.name=Runa de Vacío
+item.charm.basicpower.name=Encantamiento: Poder
+item.charm.basicagility.name=Encantamiento: Agilidad
+item.charm.basicvigor.name=Encantamiento: Vigor
+item.charm.basicdefense.name=Encantamiento: Defensa
+item.charm.basicmagic.name=Encantamiento: Inteligencia
+item.charm.equality.name=Encantamiento: Equivalencia
+item.charm.blocking.name=Encantamiento: Bloqueo
+item.charm.blockingreflection.name=Encantamiento: Reflexión durante el bloqueo
+item.charm.digestiverecover.name=Encantamiento: Recuperación del hambre
+item.charm.lifesteal.name=Encantamiento: Robo de vida
+item.charm.damageredirection.name=Encantamiento: Redirección del daño
+item.charm.magicpenetration.name=Encantamiento: Penetración Mágica
+item.charm.witcheryharm.name=Encantamiento: Mal de ojo
+item.charm.witcherydefense.name=Encantamiento: Velo
+item.charm.fallingprotection.name=Encantamiento: Protección contra caídas
+item.charm.haste.name=Encantamiento: Prisa
+item.charm.criticalstrike.name=Encantamiento: Golpe crítico
+item.charm.seconddurability.name=Encantamiento: Segunda durabilidad
+item.charm.voidrescue.name=Encantamiento: Rescate del vacío
+item.charm.slaughterimpact.name=Encantamiento: Venganza
+item.charm.lastresort.tooltip=Te teletransporta a $0 bloques de distancia del ultimo golpe con enfriamiento de $1 segundos
+item.charm.lastresort.name=Encantamiento: Ultimo aliento
+item.charm.magicdefense.tooltip=-$0 de daño mágico recibido
+item.charm.magicdefense.name=Encantamiento: Defensa Mágica
+entity.louse.name=Sabandija
+container.charmPouch=Bolsa de encantamientos
+container.runeCrafting=Crear runas
+item.charm.blockingrepulsion.tooltip=-$0 de daño recibido y $1x del empuje repelido
+item.charm.blockingrepulsion.name=Encantamiento: Bloquear empuje
+item.fireShard.name=Fragmento de fuego
+item.charm.basicpower.tooltip=+$0 de daño
+item.charm.basicagility.tooltip=+$0 de velocidad
+item.charm.basicvigor.tooltip=+$0 de regeneración de vida
+item.charm.basicdefense.tooltip=-$0 de daño sufrido
+item.charm.basicmagic.tooltip=+$0 de experiencia
+item.charm.equality.tooltip=+$0 de daño\n+$1 de velocidad\n+$2 de regeneración de vida\n-$3 de daño sufrido\n+$4 de experiencia
+item.charm.blocking.tooltip=-$0 de daño sufrido mientras bloqueas
+item.charm.blockingreflection.tooltip=-$0 de daño recibido y $1 reflejado cuando bloqueas
+item.charm.digestiverecover.tooltip=$0 de vida por cada 1 de hambre
+item.charm.lifesteal.tooltip=$0 de vida recibida por cada $1 de daño causado
+item.charm.damageredirection.tooltip=$0 de daño redigido a $1 criatura(s) cercana(s)
+item.charm.magicpenetration.tooltip=$0 del daño causado penetra la armadura del enemigo usando magia
+item.charm.witcheryharm.tooltip=$0 probabilidad de causar un efecto de nivel $1 durante $2 segundos
+item.charm.witcherydefense.tooltip=Resistencia a los efectos de poción
+item.charm.fallingprotection.tooltip=$0 bloques de caída
+item.charm.haste.tooltip=+$0 de velocidad de excavación
+item.charm.criticalstrike.tooltip=$0 probabilidad de ingligir $1 de daño crítico
+item.charm.seconddurability.tooltip=$0 probabilidad de recuperar $1 de durabilidad
+item.charm.voidrescue.tooltip=Chance de no morir al caer al vacío
+item.charm.slaughterimpact.tooltip=$0 de daño causado en $1 bloques de radio al morir
+item.charm.cannotstack=¡Este encantamiento no acumulará el efecto con otros encantamientos de este tipo!
+entity.hauntedMiner.name=Minero Atormentado
+tile.voidChest.name=Cofre de vacío
+tile.endiumOre.name=Mena de Endium
+tile.endiumBlock.name=Bloque de Endium
+tile.persegrit.name=Gravirada
+tile.laboratoryGlass.name=Cristal de laboratorio
+item.endiumIngot.name=Lingote de Endium
+item.knowledgeNote.name=Nota de conocimiento
+entity.homelandEnderman.name=Enderman patriotico
+energy.overlay.title=ACUMULACION DE ENERGIA
+energy.overlay.holding=MANTENIENDO $ DE ENERGIA
+energy.overlay.regen=REGENERANDO MAS DE $
+energy.status.healthy=Saludable
+energy.status.weakened=Debilitado
+energy.status.tired=Cansado
+energy.status.unstable=Inestable
+container.voidChest=Cofre de vacío
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Obsidiana de laboratorio
+tile.laboratoryFloor.name=Pavimento de laboratorio
+tile.laboratoryStairs.name=Escaleras de laboratorio
+item.ghostAmulet.impure.name=Amuleto fantasmal (Impuro)
+item.obsidianFragment.name=Fragmento de obsidiana
+item.obsidianRod.name=Vara de obsidiana
+item.energyWandCore.name=Nucleo de varita de Energía
+item.energyWand.name=Varita de Energía
+item.auricion.name=Auricion
+item.rune.any.name=Runa (Nada)
+entity.endermage.name=Mago del Fin
