--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Table de décomposition
 tile.energyExtractionTable.name=Table d'extraction d'Énergie
 tile.ravagedBrick.name=Brique ravagée
 tile.energyCluster.name=Grappe d'Énergie
-item.spectralWand.name=Baguette spectrale
 container.enhancedBrewing=Alambic amélioré
 container.decompositionTable=Table de décomposition
 container.energyExtractionTable=Table d'extraction d'Énergie
@@ -114,93 +113,103 @@ achievement.traveling101=Voyager 101
 achievement.rebirth.desc=Utilise le convocateur de la Fin pour régénérer le Néant
 achievement.rebirth=Un nouveau départ
 achievement.learningThePowers.desc=Fabriquez un autel à essence de dragon
-item.endermanRelicShattered.name=Relique d'Enderman Fracassée
 container.endPowderEnhancements=Renforcements de Poudre de Néant
 achievement.theMoreYouKnow=Le plus que tu sais
-achievement.theMoreYouKnow.desc=Frabriquer un Compendium du Néant
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
-tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
-tile.ravagedBrickGlow.name=Glowing Ravaged Brick
-tile.ravagedBrickSlab.name=Ravaged Brick Slab
-tile.ravagedBrickStairs.name=Ravaged Brick Stairs
-tile.ravagedBrickFence.name=Ravaged Brick Fence
-tile.cinder.name=Cinder
-item.scorchingPickaxe.name=Scorching Pickaxe
-item.charmPouch.name=Charm Pouch
-item.rune.power.name=Rune of Power
-item.rune.agility.name=Rune of Agility
-item.rune.vigor.name=Rune of Vigor
-item.rune.defense.name=Rune of Defense
-item.rune.magic.name=Rune of Magic
-item.rune.void.name=Rune of Void
-item.charm.basicpower.name=Charm of Power
-item.charm.basicagility.name=Charm of Agility
-item.charm.basicvigor.name=Charm of Vigor
-item.charm.basicdefense.name=Charm of Defense
-item.charm.basicmagic.name=Charm of Magic
-item.charm.equality.name=Charm of Equality
-item.charm.blocking.name=Charm of Blocking
-item.charm.blockingreflection.name=Charm of Blocking Reflection
-item.charm.digestiverecover.name=Charm of Digestive Recover
-item.charm.lifesteal.name=Charm of Life Steal
-item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.witcheryharm.name=Charm of Witchery Harm
-item.charm.witcherydefense.name=Charm of Witchery Defense
-item.charm.fallingprotection.name=Charm of Falling Protection
-item.charm.haste.name=Charm of Haste
-item.charm.criticalstrike.name=Charm of Critical Strike
-item.charm.seconddurability.name=Charm of Second Durability
-item.charm.voidrescue.name=Charm of Void Rescue
-item.charm.slaughterimpact.name=Charm of Slaughter Impact
-item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
-item.charm.lastresort.name=Charm of Last Resort
-item.charm.magicdefense.tooltip=-$0 magic damage taken
-item.charm.magicdefense.name=Charm of Magic Defense
-entity.louse.name=Louse
-container.charmPouch=Charm Pouch
-container.runeCrafting=Rune Crafting
-item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
-item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
-item.fireShard.name=Fire Shard
-item.charm.basicpower.tooltip=+$0 damage
-item.charm.basicagility.tooltip=+$0 speed
-item.charm.basicvigor.tooltip=+$0 health regeneration speed
-item.charm.basicdefense.tooltip=-$0 damage taken
-item.charm.basicmagic.tooltip=+$0 experience
-item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
-item.charm.blocking.tooltip=-$0 damage taken when blocking
-item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
-item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
-item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
-item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
-item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
-item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+achievement.theMoreYouKnow.desc=Fabriquer un Compendium du Néant
+tile.crossedDecoration.violetMoss.tall.name=Mousse violette haute
+tile.crossedDecoration.violetMoss.moderate.name=Mousse violette moyenne
+tile.crossedDecoration.violetMoss.short.name=Mousse violette courte
+tile.ravagedBrickSmooth.name=Brique ravagée lisse
+tile.ravagedBrickGlow.name=Brique ravagée lumineuse
+tile.ravagedBrickSlab.name=Pavé de brique ravagée
+tile.ravagedBrickStairs.name=Escalier de brique ravagée
+tile.ravagedBrickFence.name=Barrière de brique ravagée
+tile.cinder.name=Pousolane
+item.scorchingPickaxe.name=Pioche torride
+item.charmPouch.name=Poche de charme
+item.rune.power.name=Rune du pouvoir
+item.rune.agility.name=Rune d'agilité
+item.rune.vigor.name=Rune de vigueur
+item.rune.defense.name=Rune de défense
+item.rune.magic.name=Rune de magie
+item.rune.void.name=Rune du vide
+item.charm.basicpower.name=Charme du pouvoir
+item.charm.basicagility.name=Charme d'agilité
+item.charm.basicvigor.name=Charme de vigueur
+item.charm.basicdefense.name=Charme de défense
+item.charm.basicmagic.name=Charme de magie
+item.charm.equality.name=Charme d'équité
+item.charm.blocking.name=Charme de blocage
+item.charm.blockingreflection.name=Charme de blocage réflectif
+item.charm.digestiverecover.name=Charme de récupération digestive
+item.charm.lifesteal.name=Charme du vol de vie
+item.charm.damageredirection.name=Charme de dommages redirigés
+item.charm.magicpenetration.name=Charme de pénétration magique
+item.charm.witcheryharm.name=Charme du mal de sorcellerie
+item.charm.witcherydefense.name=Charme de défense de sorcellerie
+item.charm.fallingprotection.name=Charme de la protection de chute
+item.charm.haste.name=Charme de hâte
+item.charm.criticalstrike.name=Charme du coup critique
+item.charm.seconddurability.name=Charme de seconde durabilité
+item.charm.voidrescue.name=Charme du secours du vide
+item.charm.slaughterimpact.name=Charme d'impact du massacre
+item.charm.lastresort.tooltip=Téléporte à $0 blocs au-delà de la touche de la canne à pèche avec un refroidissement de $1 secondes
+item.charm.lastresort.name=Charme du dernier recour
+item.charm.magicdefense.tooltip=Dommages magique pris -$0
+item.charm.magicdefense.name=Charme de défense magique
+entity.louse.name=Pou
+container.charmPouch=Poche de charme
+container.runeCrafting=Fabrication de rune
+item.charm.blockingrepulsion.tooltip=Dommages pris -$0 et repousse de $1
+item.charm.blockingrepulsion.name=Charme de blocage répulsif
+item.fireShard.name=Tesson de feu
+item.charm.basicpower.tooltip=Dommage +$0
+item.charm.basicagility.tooltip=Vitesse +$0
+item.charm.basicvigor.tooltip=Vitesse de régénération +$0
+item.charm.basicdefense.tooltip=Dommages pris -$0
+item.charm.basicmagic.tooltip=Expérience +$0
+item.charm.equality.tooltip=Dommage +$0 \nVitesse +$1 \nVitesse de régénération +$2 \nDommages pris -$3 \nExpérience +$4
+item.charm.blocking.tooltip=Dommage pris en bloquant -$0
+item.charm.blockingreflection.tooltip=Dommages pris -$0 et $1 réfléchi en bloquant
+item.charm.digestiverecover.tooltip=Santé +$0 par barre de fain
+item.charm.lifesteal.tooltip=$0 santé gagnée par $1 vie prise
+item.charm.damageredirection.tooltip=$0 dommages redirigé vers les $1 créatures proches
+item.charm.magicpenetration.tooltip=Dommages pénétrant l'armure par la magie de $0 
+item.charm.witcheryharm.tooltip=$0 chances de causer un effet niveau $1 pour $2 secondes
 item.charm.witcherydefense.tooltip=
-item.charm.fallingprotection.tooltip=+$0 blocks
-item.charm.haste.tooltip=+$0 dig speed
-item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
-item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.fallingprotection.tooltip=Sur $0 blocs
+item.charm.haste.tooltip=Vitesse de minage +$0
+item.charm.criticalstrike.tooltip=$0 chances de causer $1 coups critiques
+item.charm.seconddurability.tooltip=$0 chances de retrouver $1 durabilité
 item.charm.voidrescue.tooltip=
-item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
-item.charm.cannotstack=This charm will not stack effects with other charms of this type!
-entity.hauntedMiner.name=Haunted Miner
-tile.voidChest.name=Void Chest
-tile.endiumOre.name=Endium Ore
-tile.endiumBlock.name=Endium Block
-tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratory Glass
-item.endiumIngot.name=Endium Ingot
-item.knowledgeNote.name=Knowledge Note
+item.charm.slaughterimpact.tooltip=Inflige $0 dommage dans un rayon de $1 de la mort
+item.charm.cannotstack=Ce charme ne cumulera pas ses effets avec les autres charmes de ce type !
+entity.hauntedMiner.name=Mineur hanté
+tile.voidChest.name=Coffre du vide
+tile.endiumOre.name=Minerai d'endium
+tile.endiumBlock.name=Bloc d'endium
+tile.persegrit.name=Graviolet
+tile.laboratoryGlass.name=Verre de laboratoire
+item.endiumIngot.name=Lingot d'endium
+item.knowledgeNote.name=Note de connaissance
 entity.homelandEnderman.name=Homeland Enderman
-energy.overlay.title=ENERGY CLUSTER
-energy.overlay.holding=HOLDING $ ENERGY
-energy.overlay.regen=REGENERATING UP TO $
-energy.status.healthy=HEALTHY
-energy.status.weakened=WEAKENED
-energy.status.tired=TIRED
-energy.status.unstable=UNSTABLE
-container.voidChest=Void Chest
-key.openCompendium=Ender Compendium
+energy.overlay.title=GROUPE D'ENERGIE
+energy.overlay.holding=TENUE DE $ ENERGIE
+energy.overlay.regen=REGENERATION JUSQU'A $
+energy.status.healthy=SAIN
+energy.status.weakened=AFFAIBLI
+energy.status.tired=FATIGUE
+energy.status.unstable=INSTABLE
+container.voidChest=Coffre du vide
+key.openCompendium=Compendium du Néant
+tile.laboratoryObsidian.name=Obsidienne de laboratoire
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Escaliers de laboratoire
+item.ghostAmulet.impure.name=Amulette chasse-fantôme (Impur)
+item.obsidianFragment.name=Tesson de obsidienne
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
