--- a/src/main/resources/assets/hardcoreenderexpansion/lang/nl_NL.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/nl_NL.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Decompositietafel
 tile.energyExtractionTable.name=Energieëxtractietafel
 tile.ravagedBrick.name=Geteisterde Blokstenen
 tile.energyCluster.name=Energiecluster
-item.spectralWand.name=Spookachtige Toverstaf
 container.enhancedBrewing=Verbeterde Brouwstandaard
 container.decompositionTable=Decompositietafel
 container.energyExtractionTable=Energieëxtractietafel
@@ -114,7 +113,6 @@ achievement.traveling101=Reizen 101
 achievement.rebirth.desc=Gebruik een Tempeloproeper en regenereer de End
 achievement.rebirth=Hergeboorte
 achievement.learningThePowers.desc=Creëer een Drakenessentie Altaar
-item.endermanRelicShattered.name=Verbrijzelde Endermanreliek
 container.endPowderEnhancements=Endpoeder Verbeteren
 achievement.theMoreYouKnow=Hoe meer je weet
 achievement.theMoreYouKnow.desc=Stel een Endercompendium samen
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
