--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Стол разложения
 tile.energyExtractionTable.name=Стол извлечения энергии
 tile.ravagedBrick.name=Разрушенный кирпич
 tile.energyCluster.name=Энергетический кластер
-item.spectralWand.name=Спектральный посох
 container.enhancedBrewing=Улучшенная варочная стойка
 container.decompositionTable=Стол разложения
 container.energyExtractionTable=Стол извлечения энергии
@@ -114,7 +113,6 @@ achievement.traveling101=Путешествие 101
 achievement.rebirth.desc=Используйте призыватель храма и пересоздайте Край
 achievement.rebirth=Возрождение
 achievement.learningThePowers.desc=Сделайте алтарь драконий эссенции
-item.endermanRelicShattered.name=Разрушенная реликвия Края
 container.endPowderEnhancements=Зачарования порошком Края
 achievement.theMoreYouKnow=Чем больше Вы знаете
 achievement.theMoreYouKnow.desc=Сделайте компендиум Края
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
