--- a/src/main/resources/assets/hardcoreenderexpansion/lang/no_NO.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/no_NO.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Decomposition Table
 tile.energyExtractionTable.name=Energy Extraction Table
 tile.ravagedBrick.name=Ravaged Brick
 tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=Spectral Wand
 container.enhancedBrewing=Enhanced Brewing Stand
 container.decompositionTable=Decomposition Table
 container.energyExtractionTable=Energy Extraction Table
@@ -114,7 +113,6 @@ achievement.traveling101=Traveling 101
 achievement.rebirth.desc=Use the Temple Caller and regenerate the End
 achievement.rebirth=Rebirth
 achievement.learningThePowers.desc=Create a Dragon Essence Altar
-item.endermanRelicShattered.name=Shattered Enderman Relic
 container.endPowderEnhancements=End Powder Enhancements
 achievement.theMoreYouKnow=The more you know
 achievement.theMoreYouKnow.desc=Press '%1$s' to open Ender Compendium
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
