--- a/src/main/resources/assets/hardcoreenderexpansion/lang/pt_PT.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/pt_PT.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=Mesa de Decomposição
 tile.energyExtractionTable.name=Mesa de Extração de Energia
 tile.ravagedBrick.name=Tijolo Devastado
 tile.energyCluster.name=Bloco de Energia
-item.spectralWand.name=Bastão Espectral
 container.enhancedBrewing=Estante de Fermentação Melhorada
 container.decompositionTable=Mesa de Desconstrução
 container.energyExtractionTable=Mesa de Extração de Energia
@@ -114,7 +113,6 @@ achievement.traveling101=Viajem 101
 achievement.rebirth.desc=Use o Chamador do Templo e Regenere o Fim
 achievement.rebirth=Renascer
 achievement.learningThePowers.desc=Crie um Altar de Essência do Dragão
-item.endermanRelicShattered.name=Fragmento de Relíquia de Enderman
 container.endPowderEnhancements=Melhorias em Pó do Fim
 achievement.theMoreYouKnow=Quanto Mais Você Sabe
 achievement.theMoreYouKnow.desc=Construa um Compêndio do Ender
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
