--- a/src/main/resources/assets/hardcoreenderexpansion/lang/zh_CN.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/zh_CN.lang
@@ -92,7 +92,6 @@ tile.decompositionTable.name=分解台
 tile.energyExtractionTable.name=能量提取台
 tile.ravagedBrick.name=毁灭砖块
 tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=光谱魔杖
 container.enhancedBrewing=强化酿造台
 container.decompositionTable=分解台
 container.energyExtractionTable=能量提取台
@@ -114,7 +113,6 @@ achievement.traveling101=旅行 101
 achievement.rebirth.desc=使用神庙召唤物重生末地
 achievement.rebirth=重生
 achievement.learningThePowers.desc=创造一个龙之精华祭坛
-item.endermanRelicShattered.name=破碎的末影人遗物
 container.endPowderEnhancements=附魔末影粉
 achievement.theMoreYouKnow=了解更多
 achievement.theMoreYouKnow.desc=合成一个末地手册
@@ -204,3 +202,14 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
+tile.laboratoryObsidian.name=Laboratory Obsidian
+tile.laboratoryFloor.name=Laboratory Floor
+tile.laboratoryStairs.name=Laboratory Stairs
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+item.obsidianFragment.name=Obsidian Fragment
+item.obsidianRod.name=Obsidian Rod
+item.energyWandCore.name=Energy Wand Core
+item.energyWand.name=Energy Wand
+item.auricion.name=Auricion
+item.rune.any.name=Rune (Any)
+entity.endermage.name=Endermage
