More work on Dungeon Puzzle

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -46,11 +46,17 @@ tile.ravagedBrickGlow.name=Glowing Ravaged Brick
 tile.ravagedBrickSlab.name=Ravaged Brick Slab
 tile.ravagedBrickStairs.name=Ravaged Brick Stairs
 tile.ravagedBrickFence.name=Ravaged Brick Fence
-tile.dungeonPuzzle.unlit.name=Dungeon Puzzle (Unlit)
-tile.dungeonPuzzle.lit.name=Dungeon Puzzle (Lit)
 tile.dungeonPuzzle.wall.name=Dungeon Puzzle (Wall)
-tile.dungeonPuzzle.wallRock.name=Dungeon Puzzle (Wall Rock)
-tile.dungeonPuzzle.wallLit.name=Dungeon Puzzle (Lit Wall)
+tile.dungeonPuzzle.rock.name=Dungeon Puzzle (Rock)
+tile.dungeonPuzzle.ceiling.name=Dungeon Puzzle (Ceiling)
+tile.dungeonPuzzle.trigger.unlit.name=Dungeon Puzzle (Triggerable - Unlit)
+tile.dungeonPuzzle.trigger.lit.name=Dungeon Puzzle (Triggerable - Lit)
+tile.dungeonPuzzle.chained.unlit.name=Dungeon Puzzle (Non-triggerable - Unlit)
+tile.dungeonPuzzle.chained.lit.name=Dungeon Puzzle (Non-triggerable - Lit)
+tile.dungeonPuzzle.distr.spread.unlit.name=Dungeon Puzzle (Distributor - Spread - Unlit)
+tile.dungeonPuzzle.distr.spread.lit.name=Dungeon Puzzle (Distributor - Spread - Lit)
+tile.dungeonPuzzle.distr.square.unlit.name=Dungeon Puzzle (Distributor - Square - Unlit)
+tile.dungeonPuzzle.distr.square.lit.name=Dungeon Puzzle (Distributor - Square - Lit)
 tile.energyCluster.name=Energy Cluster
 tile.cinder.name=Cinder
 tile.persegrit.name=Persegrit
